# iTAC-AD

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  FINAL_REPORT.md  MODEL_CARD.md  Makefile  PROJECT_SUMMARY.md  README.md  README_EXPERIMENT_FRAMEWORK.md  README_EXPORT.md  README_JSON_STREAM.md  README_RELEASE_LEVEL.md  README_iTAC_AD.md  README_iTAC_AD_Complete.md  RELEASE_CHECKLIST.md  RELEASE_STATUS.md  RELEASE_SUMMARY.md  REPORT_精化三件套.md  THIRD_PARTY_NOTICES.md  analyze_training.py  check_environment.py  demo_json_stream.py  eval.py  main.py  pyproject.toml  requirements.in.bak  test_aac_scheduler.py  test_all_features.py  test_complete_json_stream.py  test_export.py  test_itac_ad_enhanced.py  test_itac_ad_integration.py  test_itac_ad_quick.py  test_phase2_alignment.py  test_release_features.py  train_itac_sanity.py  upload_to_github.sh  verify_features.sh  verify_release.py
itac_ad/: train_itac_sanity.py
itac_eval/: __init__.py  metrics.py
itacad/: calibrate.py  cli.py  export.py  exportable.py  score.py  thresholding.py
release_v0.1.0/: LICENSE
rt/: json_stream.py  stream_runner.py
scripts/: bench_grid.sh  bench_one.sh  eval_event.sh  fetch_tranad_datasets.sh  freeze_env.sh  get_data.sh  make_release.sh  robust_eval.sh  run_smd.sh  run_synthetic.sh  run_tranad_baseline.sh  run_validation_grid.sh  test_simple.sh
tests/: test_event_merge.py  test_forward.py  test_grl_sign.py  test_import.py  test_mini_epoch.py  test_pot_monotonic.py  test_reproducibility.py
tools/: aac_sensitivity.py  aggregate_results.py  compare_to_tranad_paper.py  (+7 more)
(+19 files in other folders)
